# vlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
src/: CMakeLists.txt
src/v/: CMakeLists.txt  stdafx.h  v.cpp
src/v2cpp/: CMakeLists.txt  cpp_generator.cpp  cpp_generator.h  stdafx.h  v2cpp.h
src/vcompiler/: CMakeLists.txt  compile_error.cpp  compile_error.h  lex_type.cpp  lex_type.h  name_resolver.h  parse_error.cpp  parse_error.h  stdafx.h  text_stream.cpp  text_stream.h  text_symbol.h  text_token.cpp  text_token.h  tokenizer.cpp  tokenizer.h  vcompiler.h  vfile_syntax.cpp  vfile_syntax.h  vjson_file_parser.cpp  vjson_file_parser.h  vjson_object.cpp  vjson_object.h  vlex.cpp  vlex.h  vlexer.cpp  vlexer.h  vmethod_compiler.cpp  vpackage_compiler.cpp  vpackage_compiler.h  vsyntax.h  vtoken.cpp  vtoken.h  vtokenizer.cpp  vtokenizer.h  vtype_resolver.cpp
src/vruntime/: CMakeLists.txt  core_types.cpp  core_types.h  stdafx.h  targetver.h  vrt_expression.cpp  vrt_expression.h  vrt_injection.cpp  vrt_injection.h  vrt_injection_lifetime.h  vrt_package.cpp  vrt_package.h  vrt_resolve_dependency.cpp  vrt_resolve_dependency.h  vrt_scope.cpp  vrt_scope.h  vrt_statement.cpp  vrt_statement.h  vruntime.cpp  vruntime.h  vruntime_machine.cpp  vruntime_machine.h
tests/: CMakeLists.txt
tests/vcompiled/: CMakeLists.txt  app.cpp  app.h
tests/vcompiler_module/: c_generator.v  main.v  tokenizer.v
